# Domino-Duck

./: .gitignore  about.md
Design/: Classes.md  Scene.md
Design/Scenes/: OptionsMenu.md  SceneFlow.md  TimedStaticScene.md  TitleMenu.md
DominoDuck/: CMakeLists.txt
DominoDuck/DominoDuck/: AssetManager.cpp  AssetManager.h  CMakeLists.txt  DominoDuck.cpp  DominoDuck.h  Engine.cpp  Engine.h  EventSignaller.cpp  EventSignaller.h  GameClock.cpp  GameClock.h  Main.cpp  Preferences.cpp  Preferences.h  Preferences.hpp  Renderable.cpp  Renderable.h  Scene.cpp  Scene.h  StaticLogger.cpp  StaticLogger.h  Texture.cpp  Texture.h  Window.cpp  Window.h
DominoDuck/GlobalLogger/: CMakeLists.txt  GlobalLogger.cpp  GlobalLogger.h
